# ip2proxy-varnish

./: CHANGES.rst  Makefile.am  README.rst  autogen.sh  configure.ac  readme.md
src/: Makefile.am  vmod_ip2proxy.c  vmod_ip2proxy.vcc
